--- a/app/src/main/res/drawable/radio_button_correct_background.xml
+++ b/app/src/main/res/drawable/radio_button_correct_background.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E0F2F1" /> <corners android:radius="16dp" />
-    <stroke android:width="2dp" android:color="@color/primary_green" />
+    <solid android:color="@color/green_500" />
+    <corners android:radius="12dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/green_700" />
 </shape>
