--- a/app/src/main/res/drawable/radio_button_incorrect_background.xml
+++ b/app/src/main/res/drawable/radio_button_incorrect_background.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFEBEE" /> <corners android:radius="16dp" />
-    <stroke android:width="2dp" android:color="@color/primary_red" />
+    <solid android:color="@color/red_500" />
+    <corners android:radius="12dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/red_700" />
 </shape>
