--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary_purple">#7B68EE</color>
+    <color name="purple_primary">#f2efeb</color>
     <color name="dark_purple">#6A5ACD</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="light_purple">#9966FF</color>
     <color name="primary_green">#58CC02</color>
+    <color name="green_500">#58CC02</color>
+    <color name="green_700">#02CC3F</color>
+    <color name="red_500">#FF0000</color>
+    <color name="red_700">#CC0000</color>
+    <color name="gray_100">#F5F5F5</color>
+    <color name="memory_card_default_stroke">#EAEAEA</color>
+    <color name="memory_card_selected_stroke">#0085FF</color>
+    <color name="memory_card_matched_stroke">#735cdd</color>
+    <color name="memory_card_matched_tint">#E0D9FF</color>s
+    <color name="gray_700">#616161</color>
     <color name="primary_red">#F54545</color>
     <color name="primary_blue">#1CB0F6</color>
+    <color name="lives_heart_red">#e20000</color>
+    <color name="feedback_correct_background">#735cdd</color>
+    <color name="feedback_incorrect_background">#ff3838</color>
+    <color name="choice_correct_background">#e0d9ff</color>
+    <color name="choice_incorrect_background">#ffa5a5</color>
+    <color name="choice_border_color">#E0E0E0</color>
+    <color name="progress_bar_background">#f2efeb</color>
+
+    <color name="memory_card_default">#e0e0e0</color>
+    <color name="memory_card_selected">#91d7ff</color>
+    <color name="memory_card_matched">#b5acff</color>
 
     <color name="gray_background">#F5F5F5</color>
     <color name="gray_light">#E0E0E0</color>
+    <color name="gray_border">#9E9E9E</color>
+    <color name="border_color_light">#9E9E9E</color>
     <color name="gray_text">#757575</color>
     <color name="gray_dark">#212121</color>
 
