--- a/app/src/main/res/layout/fragment_memory.xml
+++ b/app/src/main/res/layout/fragment_memory.xml
@@ -8,21 +8,32 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/tvMemoryTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_bold"
-        android:text="@string/memory_game_title"
+        android:text="@string/memory_game_title_detailed"
         android:textColor="@color/black"
         android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/tvPairsCounter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/open_sans"
+        android:textColor="@color/gray_text"
+        android:textSize="16sp"
+        tools:text="Pares encontrados 0/4" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memoryGrid"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:spanCount="4"
         tools:listitem="@layout/item_memory_card"/>
 
 </LinearLayout>
