--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="Início"/>
+        android:title="Home" />
     <item
         android:id="@+id/nav_activities"
         android:icon="@drawable/ic_activities"
-        android:title="Atividades"/>
+        android:title="Atividades" />
     <item
         android:id="@+id/nav_ranking"
         android:icon="@drawable/ic_ranking"
-        android:title="Ranking"/>
+        android:title="Ranking" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Perfil"/>
+        android:title="Perfil" />
 </menu>
