--- a/app/src/main/res/drawable/choice_default_background.xml
+++ b/app/src/main/res/drawable/choice_default_background.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent"/>
-    <corners android:radius="16dp"/>
-    <stroke android:width="2dp" android:color="@color/choice_border_color"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@android:color/transparent" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/gray_light" />
+    <corners android:radius="16dp" />
 </shape>
