--- a/app/src/main/res/drawable/choice_incorrect_background.xml
+++ b/app/src/main/res/drawable/choice_incorrect_background.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/choice_incorrect_background"/>
-    <corners android:radius="16dp"/>
-    <stroke android:width="2dp" android:color="@color/feedback_incorrect_background"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/choice_incorrect_background" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/primary_red" />
+    <corners android:radius="16dp" />
 </shape>
