--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary_purple">#7B68EE</color>
     <color name="purple_primary">#f2efeb</color>
@@ -18,7 +17,7 @@
     <color name="memory_card_default_stroke">#EAEAEA</color>
     <color name="memory_card_selected_stroke">#0085FF</color>
     <color name="memory_card_matched_stroke">#735cdd</color>
-    <color name="memory_card_matched_tint">#E0D9FF</color>s
+    <color name="memory_card_matched_tint">#E0D9FF</color>
     <color name="gray_700">#616161</color>
     <color name="primary_red">#F54545</color>
     <color name="primary_blue">#1CB0F6</color>
@@ -43,8 +42,7 @@
     <color name="border_color_light">#9E9E9E</color>
     <color name="gray_text">#757575</color>
     <color name="gray_dark">#212121</color>
-
-    <color name="progress_bar_background">#f2efeb</color>
+    <color name="disabled_gray">#D3D3D3</color> <color name="progress_bar_background">#f2efeb</color>
     <color name="progress_bar_progress">#735cdd</color>
 
     <color name="black">#FF000000</color>
